--- a/src/README
+++ b/src/README
@@ -8,18 +8,11 @@
 This directory, "src", contains the main source code to Star Traders.  The
 source code is split up among the following files:
 
-    trader.h    - Main program header file
-    trader.c    - Main program, command-line interface
-    system.h    - All system header files are included here
-    globals.h   - Global game constants and variables
-    globals.c   - Global game variable definitions
-    game.h      - Game starting and ending routines header file
-    game.c      - Game starting and ending routines for Star Traders
-    fileio.h    - Load and save game file routines header file
-    fileio.c    - Load and save game file routines
-    help.h      - Help text routines header file
-    help.c      - Help text routines: how to play Star Traders
-    intf.h      - Basic text input/output header file
-    intf.c      - Basic text input/output routines
-    utils.h     - Utility functions header file
-    utils.c     - Utility functions needed by Star Traders
+    trader.c    trader.h    - Main program, command-line interface
+    globals.c   globals.h   - Global game constants and variables
+    game.c      game.h      - Game start and end routines
+    fileio.c    fileio.h    - Load and save game file routines
+    help.c      help.h      - Help text routines: how to play Star Traders
+    intf.c      intf.h      - Basic text input/output routines
+    utils.c     utils.h     - Utility functions needed by Star Traders
+    system.h                - All system header files are included here
