--- a/src/README
+++ b/src/README
@@ -12,6 +12,7 @@ source code is split up among the following files:
     globals.c   globals.h   - Global game constants and variables
     game.c      game.h      - Game start and end routines
     move.c      move.h      - Routines for making and processing a move
+    exch.c      exch.h      - Stock Exchange and Bank routines
     fileio.c    fileio.h    - Load and save game file routines
     help.c      help.h      - Help text routines: how to play Star Traders
     intf.c      intf.h      - Basic text input/output routines
