--- a/doc/trader.6
+++ b/doc/trader.6
@@ -95,13 +95,20 @@ Star Traders encountered an unrecoverable problem or error; a diagnostic
 message will be written to standard error in this case.
 .\" *********************************************************************
 .SH EXAMPLES
-You can start an ordinary game by running Star Traders without any
-command line options:
+You can start a new game by running Star Traders without any command line
+options:
 .RS
 .sp
 .B trader
 .sp
 .RE
+Once the game starts, you will be asked to enter the number of people
+playing.  From one to eight people can play (although, in this version,
+they will all have to share the one keyboard and screen!).  After
+entering in the names of the players, you will have the opportunity to
+read instructions on how to play the game.  Do so\(emand good luck in the
+game!
+.PP
 If you would like to continue a previously-saved game, simply specify
 that game number on the command line.  For example, the following starts
 game 4, if it was previously saved:
@@ -116,8 +123,10 @@ game in a dedicated
 window (all on one line):
 .RS
 .sp
-.hy 0
+.nh
+.na
 .B "xterm \-g 80x24 \-fa Mono \-fs 18 \-bg black \-fg white \-bc +sb +fbx \-e trader &"
+.ad
 .hy 14
 .sp
 .RE
@@ -125,8 +134,10 @@ If you would like a full \*(lqretro-computing\*(rq green-screen
 experience, try (again, all on one line):
 .RS
 .sp
-.hy 0
+.nh
+.na
 .B "xterm \-g 80x24 \-fa Mono \-fs 18 \-bg black \-fg '#009911' \-bc +sb +bdc +fbx \-xrm 'XTerm*colorBD: #00FF00' \-e trader \-\-no\-colour &"
+.ad
 .hy 14
 .sp
 .RE
@@ -154,7 +165,7 @@ manual pages for more details on locale settings.
 .\" *********************************************************************
 .SH FILES
 .TP
-.IB ~/.trader/game N
+.IB \(ti/.trader/game N
 Star Traders stores saved game files in the \fI.trader\fR subdirectory in
 your home directory.  \fIN\fR is a number between \fB1\fR and \fB9\fR
 inclusive.  The game file is scrambled to prevent you or others from
@@ -214,7 +225,7 @@ them.
 .\" *********************************************************************
 .SH HISTORY
 The original (and very primitive) Star Traders game was written by
-S.\ J.\ Singer in 1984 using Altair Basic.  This was modified for
+S.\~J\. Singer in 1984 using Altair Basic.  This was modified for
 Microsoft Basic (MBASIC) running under the CP/M-80 operating system by
 John Zaitseff and released on 7th March, 1988.
 .PP
