--- a/README
+++ b/README
@@ -9,7 +9,41 @@ Welcome to  Star Traders!  This is a  simple game of interstellar trading,
 where the  objective is to create  companies, buy and  sell shares, borrow
 and repay money, in order to become the wealthiest player (the winner).
 
-@@@ To be written
+
+Installation
+============
+
+Full instructions  for installing  Star Traders  are contained in the file
+INSTALL; the short version is:
+
+    ./configure
+    make
+    make install
+
+The final command  needs to be run as the  system administrator (root), of
+course.
+
+
+How to Play
+===========
+
+Star Traders  comes with quite  extensive in-built instructions on  how to
+play the game.  Start by running "trader" from the command line.  You will
+be prompted for  the number of players; from one to  eight people can play
+(although, in this  version, they will all have to  share the one keyboard
+and screen!).  After  entering in the names of the  players, you will have
+the opportunity to read instructions on how to play the game.  Do so---and
+good luck in the game!
+
+The manual page for Star Traders contains more information on command line
+options, as well as some  suggestions for running a retro-computing green-
+screen nostalgia tour  version of the game...  Try  running the following,
+for example (all on one line):
+
+    xterm -g 80x24 -fa Mono -fs 18 -bg black -fg '#009911' -bc +sb +bdc \
+        +fbx -xrm 'XTerm*colorBD: #00FF00' -e trader --no-colour &
+
+To read the manual page, type "man trader" from the command line.
 
 
 Feedback
