Add copyright information to the README file

--- a/README
+++ b/README
@@ -61,3 +61,19 @@ welcomed!  Please send these to:
     E-mail:   J.Zaitseff@zap.org.au
     Web:      http://www.zap.org.au/software/trader/
     FTP:      ftp://ftp.zap.org.au/pub/trader/
+
+
+Copyright
+=========
+
+Copyright (C) 1990-2011, John Zaitseff.
+
+Star Traders is  free software that is distributed under  the terms of the
+GNU  General Public  License.  You  can redistribute  it and/or  modify it
+under  the  terms  of that  License  as  published  by the  Free  Software
+Foundation, either version 3 or (at your option) any later version.
+
+This game is  distributed in the hope that it will  be useful, but WITHOUT
+ANY  WARRANTY; without  even the  implied warranty  of  MERCHANTABILITY or
+FITNESS FOR A  PARTICULAR PURPOSE.  See the GNU  General Public License in
+the file COPYING for more details.
