Final minor edits of various documentation files

--- a/doc/README
+++ b/doc/README
@@ -5,5 +5,5 @@
 *                                                                        *
 **************************************************************************
 
-This directory, "doc", contains documentation related to Star Traders.  In
+This directory,  doc, contains documentation related to  Star Traders.  In
 particular, the Unix manual page for the game is in the file "trader.6".
