--- a/NEWS
+++ b/NEWS
@@ -20,10 +20,15 @@ Version 7.0 (not yet released)
 
 Released the first version of Star Traders for Unix-like operating systems
 such as Linux.  It requires a text  console or window of at least 80x24 in
-size.  The  code is written  in the C  programming language as  a learning
+size.  The code is written  in the C99 programming  language as a learning
 exercise for a  number of software tools and  libraries; the algorithms in
 the  original Pascal and  Visual Basic  versions are  reused for  the game
 logic.
+
+Note that the current version of Star Traders does NOT handle locales with
+multibyte character sequences  (such as UTF-8) correctly.  Each  byte in a
+multibyte sequence is treated  as a separate character.  Eight-bit locales
+(such as US-ASCII, ISO8859-1, etc.) work correctly.
 
 
 Early history
@@ -40,16 +45,17 @@ using Turbo Pascal 3.01a.  Essentially, only the name of the game and some
 of the ideas  were retained in this version.  Version 4.1  of Star Traders
 was released on 1st August, 1991.
 
-In 1992, it was recompiled for the NEC Advanced Personal Computer (with 8"
-drives!)  running  CP/M-86 on an  8086 processor, using Turbo  Pascal 2.0.
-This version had colour added to  it in the form of ANSI escape sequences;
-version 4.4 was released on 2nd August, 1993.
+In 1992,  it was recompiled for  the NEC Advanced  Personal Computer (with
+8-inch floppy drives!)  running CP/M-86  on an 8086 processor, using Turbo
+Pascal  2.0.  This version  had colour  added to  it in  the form  of ANSI
+escape sequences; version 4.4 was released on 2nd August, 1993.
 
 The next version  came in 1993, when the program was  recompiled to run on
 IBM-compatible machines running MS-DOS and ANSI.SYS.  Turbo Pascal 6.0 was
 used for  this.  The ANSI  escape sequences were slightly  different under
 MS-DOS than  under the NEC,  in that the  NEC supported a number  of extra
-character attributes.
+character  attributes.  In other  words, the  MS-DOS version  looked worse
+than the one running under CP/M-86!
 
 Star Traders was recompiled again in 1994 for IBM-compatible machines with
 VGA/EGA/CGA video graphics adapters.   The output routines were recoded to
