--- a/README
+++ b/README
@@ -31,8 +31,8 @@ Star Traders  comes with quite  extensive in-built instructions on  how to
 play the game.  Start by running "trader" from the command line.  You will
 be prompted for  the number of players; from one to  eight people can play
 (although, in this  version, they will all have to  share the one keyboard
-and screen!).  After  entering in the names of the  players, you will have
-the opportunity to read instructions on how to play the game.  Do so---and
+and screen!).  After entering the names  of the players, you will have the
+opportunity to  read instructions  on how to  play the game.   Do so---and
 good luck in the game!
 
 The manual page for Star Traders contains more information on command line
