--- a/doc/trader.6
+++ b/doc/trader.6
@@ -105,8 +105,8 @@ options:
 Once the game starts, you will be asked to enter the number of people
 playing.  From one to eight people can play (although, in this version,
 they will all have to share the one keyboard and screen!).  After
-entering in the names of the players, you will have the opportunity to
-read instructions on how to play the game.  Do so\(emand good luck in the
+entering the names of the players, you will have the opportunity to read
+instructions on how to play the game.  Do so\(emand good luck in the
 game!
 .PP
 If you would like to continue a previously-saved game, simply specify
@@ -120,7 +120,7 @@ game 4, if it was previously saved:
 If you are running under the X Window System, you might like to start the
 game in a dedicated
 .BR xterm (1)
-window (all on one line):
+window (typed all on one line):
 .RS
 .sp
 .nh
@@ -131,7 +131,7 @@ window (all on one line):
 .sp
 .RE
 If you would like a full \*(lqretro-computing\*(rq green-screen
-experience, try (again, all on one line):
+experience, try (again, typed all on one line):
 .RS
 .sp
 .nh
@@ -236,15 +236,16 @@ the game and some of the ideas were retained in this version.  Version
 4.1 of Star Traders was released on 1st August, 1991.
 .PP
 In 1992, it was recompiled for the NEC Advanced Personal Computer (with
-8-inch drives!) running CP/M-86 on an 8086 processor, using Turbo Pascal
-2.0.  This version had colour added to it in the form of ANSI escape
-sequences; version 4.4 was released on 2nd August, 1993.
+8-inch floppy drives!) running CP/M-86 on an 8086 processor, using Turbo
+Pascal 2.0.  This version had colour added to it in the form of ANSI
+escape sequences; version 4.4 was released on 2nd August, 1993.
 .PP
 The next version came in 1993, when the program was recompiled to run on
 IBM-compatible machines running MS-DOS and ANSI.SYS.  Turbo Pascal 6.0
 was used for this.  The ANSI escape sequences were slightly different
 under MS-DOS than under the NEC, in that the NEC supported a number of
-extra character attributes.
+extra character attributes.  In other words, the MS-DOS version looked
+worse than the one running under CP/M-86!
 .PP
 Star Traders was recompiled again in 1994 for IBM-compatible machines
 with VGA/EGA/CGA video graphics adapters.  The output routines were
