--- a/doc/trader.6
+++ b/doc/trader.6
@@ -261,8 +261,9 @@ on 15th September, 1995.
 .PP
 Star Traders was then to languish until almost 16 years later... when the
 game was rewritten once again, this time in the C programming language.
-Version 7.0 was released on @@@ for Unix-like operating systems such as
-Linux.  Now you, too, can run this small piece of computing history!
+Version 7.0 was released on 25th July, 2011 for Unix-like operating
+systems such as Linux.  Now you, too, can run this small piece of
+computing history!
 .\" *********************************************************************
 .SH "SEE ALSO"
 .URL http://www.zap.org.au/software/trader/ "Star Traders home page"
