Start preparing for version 7.2
In this version, hopefully, internationalisation and multibyte strings
will be handled correctly.

--- a/NEWS
+++ b/NEWS
@@ -15,6 +15,12 @@ consult the Subversion repository for "trader" on The ZAP Group web server
 at http://www.zap.org.au/services/svn/.
 
 
+Version 7.2 (not yet released)
+------------------------------
+
+@@@ To be written.  Internationalisation, multibyte strings
+
+
 Version 7.1 (29th July, 2011)
 -----------------------------
 
