--- a/INSTALL
+++ b/INSTALL
@@ -34,12 +34,18 @@ and installation:
     In actual fact, Star Traders uses the GNU Portability Library, so many
     older systems may also work without modification.
 
-3.  A working X/Open Curses-compatible library, such as NCurses.
+3.  A working X/Open Curses-compatible  library, such as Ncurses.  Ncurses
+    is preferred over system-native libraries, if present.
 
-4.  Development libraries and header files  for all of the above.  On many
+4.  The GNU Gettext library, version 0.18.1 or later, to allow the game to
+    use languages other than English;  this is also called Native Language
+    Support.  If you do not have  this library (and do not wish to install
+    it), you may pass "--disable-nls" to the configure script.
+
+5.  Development libraries and header files  for all of the above.  On many
     systems, these files are part of XXX-dev packages.
 
-5.  The GNU Perfect Hash Function  Generator, gperf.  This utility program
+6.  The GNU Perfect Hash Function  Generator, gperf.  This utility program
     is required for parts of the GNU Portability Library.
 
 
@@ -63,13 +69,13 @@ command line options:
 
     --disable-nls       Do not use Native Language Support
     --disable-assert    Turn off all debugging assert() statements
-    --with-ncurses      Force the use of NCurses  over the system's Curses
+    --with-ncurses      Force the use of Ncurses  over the system's Curses
                         library
-    --with-ncursesw     Force the use of  the NCursesW library  with wide-
+    --with-ncursesw     Force the use of  the NcursesW library  with wide-
                         character support
-    --without-ncursesw  Don't use the NCursesW library with wide-character
+    --without-ncursesw  Don't use the NcursesW library with wide-character
                         support
-    --without-ncurses   Don't use  the NCurses  library:  use the system's
+    --without-ncurses   Don't use  the Ncurses  library:  use the system's
                         normal Curses library
 
 By default, configure uses  "/usr/local" as the top-level (prefix) install
@@ -94,12 +100,12 @@ You can also run configure  in a separate build-only directory tree.  This
 feature requires GNU Make and allows you to keep the source code tree from
 being modified by  the compilation process.  To use  this option, create a
 separate build directory, then run  configure.  For example, if you placed
-the Star Traders  source code tree in $HOME/src/trader-7.0,  you could run
+the Star Traders  source code tree in $HOME/src/trader-7.2,  you could run
 something like:
 
-    mkdir /tmp/trader-build-7.0
-    cd /tmp/trader-build-7.0
-    $HOME/src/trader-7.0/configure
+    mkdir /tmp/trader-build-7.2
+    cd /tmp/trader-build-7.2
+    $HOME/src/trader-7.2/configure
 
 Once again, the Autoconf manual describes these options (and many others):
 
