--- a/po/en_CA.po
+++ b/po/en_CA.po
@@ -673,13 +673,11 @@ msgstr ""
 msgid ""
 "%ls has been declared bankrupt by the Interstellar Trading Bank.\n"
 "\n"
-"^{The Bank has agreed to pay stock holders ^}%.2f%%^{ of the share value on "
-"each share owned.^}"
+"^{The Bank has agreed to pay stock holders ^}%.2f%%^{ of the share value on each share owned.^}"
 msgstr ""
 "%ls has been declared bankrupt by the Interstellar Trading Bank.\n"
 "\n"
-"^{The Bank has agreed to pay stock holders ^}%.2f%%^{ of the share value on "
-"each share owned.^}"
+"^{The Bank has agreed to pay stock holders ^}%.2f%%^{ of the share value on each share owned.^}"
 
 #. TRANSLATORS: The label "Amount paid per share"
 #. refers to payment made by the Interstellar
