Start preparing for version 7.3: bug fixes and a Russian translation

--- a/NEWS
+++ b/NEWS
@@ -15,6 +15,12 @@ consult the Subversion repository for "trader" on The ZAP Group web server
 at http://www.zap.org.au/services/svn/.
 
 
+Version 7.3 (not yet released)
+------------------------------
+
+@@@ Minor bug fixes.  Russian translation.
+
+
 Version 7.2 (29th August, 2011)
 -------------------------------
 
